Change app colors

--- a/src/less/includes/activity.less
+++ b/src/less/includes/activity.less
@@ -59,7 +59,7 @@
     .data {
       font-size: 1.1em;
       font-weight: bold;
-      color: @main-brand-color;
+      color: @second-brand-color;
     }
   }
 
