--- a/src/less/includes/loading-spinner.less
+++ b/src/less/includes/loading-spinner.less
@@ -6,7 +6,7 @@
   & > div {
     width: 18px;
     height: 18px;
-    background-color: @fourth-brand-color;
+    background-color: @second-brand-color;
     border-radius: 100%;
     display: inline-block;
     -webkit-animation: bounce 1.4s infinite ease-in-out;
