--- a/src/less/includes/nav-tabs.less
+++ b/src/less/includes/nav-tabs.less
@@ -27,7 +27,7 @@
       background-color: #f5f5f5;
       border: solid @nav-tabs-border-color;
       border-width: 3px 1px 1px;
-      border-top-color: @third-brand-color;
+      border-top-color: @second-brand-color;
       border-bottom-color: transparent;
 
       .tab-icon {
