--- a/src/less/includes/panel.less
+++ b/src/less/includes/panel.less
@@ -11,14 +11,17 @@
 }
 
 .debts-panel-heading {
-  .divider-after(@margin: 0.8em; @width: 1px; @color: @main-brand-color);
-  padding: 1em 1em 0;
+  padding: 0.6em;
+  margin: -1px -1px 0;
+  background-color: @main-brand-color;
+  border-top-left-radius: @border-radius-small;
+  border-top-right-radius: @border-radius-small;
 }
 
 .debts-panel-title {
   margin-top: 0;
   margin-bottom: 0;
-  color: @main-brand-color;
+  color: #fff;
 }
 
 .debts-panel-body {
