--- a/src/less/includes/participant.less
+++ b/src/less/includes/participant.less
@@ -55,7 +55,7 @@
   .avatar {
     width: 100%;
     margin-bottom: 1em;
-    background-color: @second-brand-color;
+    background-color: @third-brand-color;
     border-radius: @border-radius-base;
 
     &:after {
