--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -1,9 +1,8 @@
 @fa-font-path: "/bower_components/fontawesome/fonts/";
 
-@main-brand-color: #ff895d;
-@second-brand-color: #d5eeff;
-@third-brand-color: #78bbe6;
-@fourth-brand-color: #1b435d;
+@main-brand-color: #f35f5f;
+@second-brand-color: #cc435f;
+@third-brand-color: #f1ea65;
 @inverse-brand-color: #fff;
 
 @font-family-base: 'PT Sans', Helvetica, sans-serif;
@@ -16,15 +15,15 @@
 @padding-huge-vertical: 15px;
 @padding-huge-horizontal: 20px;
 
-@btn-debts-secondary-bg: @third-brand-color;
+@btn-debts-secondary-bg: @second-brand-color;
 @btn-debts-secondary-color: #fff;
 @btn-debts-secondary-border: darken(@btn-debts-secondary-bg, 5%);
 
-@btn-load-more-bg: @third-brand-color;
+@btn-load-more-bg: @second-brand-color;
 @btn-load-more-color: #fff;
 @btn-load-more-border: darken(@btn-load-more-bg, 5%);
 
 @input-border-focus: @main-brand-color;
 
-@nav-link-hover-bg: @second-brand-color;
-@nav-pills-active-link-hover-bg: @third-brand-color;
+@nav-link-hover-bg: @third-brand-color;
+@nav-pills-active-link-hover-bg: @second-brand-color;
