--- a/src/less/includes/history.less
+++ b/src/less/includes/history.less
@@ -1,10 +1,6 @@
 .history {
   .debts-panel-heading {
-    padding: 0.7em 0.7em 0;
-
-    &:after {
-      margin-top: 0.5em;
-    }
+    padding: 0.4em;
   }
 
   .debts-panel-title {
