Apply colors change to reminder email

--- a/server/views/emails/reminder.jade
+++ b/server/views/emails/reminder.jade
@@ -1,4 +1,4 @@
-- var mainBrandColor = "#ff895d";
+- var mainBrandColor = "#f35f5f";
 - var fontFamily = "lucida sans unicode, lucida grande, sans-serif";
 
 doctype transitional
