Add small improvements

--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -3,6 +3,7 @@
 @main-brand-color: #f35f5f;
 @second-brand-color: #cc435f;
 @third-brand-color: #f1ea65;
+@fourth-brand-color: #36A3EB;
 @inverse-brand-color: #fff;
 
 @font-family-base: 'PT Sans', Helvetica, sans-serif;
@@ -23,7 +24,7 @@
 @btn-load-more-color: #fff;
 @btn-load-more-border: darken(@btn-load-more-bg, 5%);
 
-@input-border-focus: @main-brand-color;
+@input-border-focus: @fourth-brand-color;
 
 @nav-link-hover-bg: @third-brand-color;
 @nav-pills-active-link-hover-bg: @second-brand-color;
