--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -1,4 +1,4 @@
-@fa-font-path: "/bower_components/fontawesome/fonts/";
+@fa-font-path: "../../font-awesome/fonts";
 
 @main-brand-color: #f35f5f;
 @second-brand-color: #cc435f;
