--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -5,6 +5,16 @@ block content
 
 block js
   script(src="/i18next/i18next.js")
+  script(src="/jquery/dist/jquery.js")
+  script(src="/jquery-bridget/jquery-bridget.js")
+  script(src="/ev-emitter/ev-emitter.js")
+  script(src="/desandro-matches-selector/matches-selector.js")
+  script(src="/fizzy-ui-utils/utils.js")
+  script(src="/get-size/get-size.js")
+  script(src="/outlayer/item.js")
+  script(src="/outlayer/outlayer.js")
+  script(src="/masonry-layout/masonry.js")
+  script(src="/imagesloaded/imagesloaded.js")
   script(src=revision("vendor", "js"))
   script(src=revision("main", "js"))
   script(src="/angular-locale_#{i18n.locale().toLowerCase()}.js")
