--- a/server/views/templates/event/results.jade
+++ b/server/views/templates/event/results.jade
@@ -21,7 +21,7 @@
                     | {{::participantResult.participantShare, plural, =1 {1 #{shareLabel}} other {# #{shareLabel}s}}}
                 p= t("app.results.spent")
                   | &nbsp;
-                  span.text-bold(ng-bind="::participantResult.totalSpent | currency")
+                  span.text-bold(ng-bind="::participantResult.totalSpent | currency:model.event.currency")
               .col-sm-6.col-xs-12
                 .table-responsive
                   table.table
@@ -33,10 +33,10 @@
                     tbody
                       tr(ng-repeat="row in ::participantResult.details" debts-visual-indicator="::")
                         th(scope="row" ng-bind="::row.participantName")
-                        td(ng-bind="::row.mitigatedDebt | currency")
-                        td(ng-bind="::row.advance | currency")
+                        td(ng-bind="::row.mitigatedDebt | currency:model.event.currency")
+                        td(ng-bind="::row.advance | currency:model.event.currency")
                     tfoot
                       tr
                         th(scope="row")= t("app.results.total")
-                        td.text-bold(ng-bind="::participantResult.totalDebt | currency")
-                        td.text-bold(ng-bind="::participantResult.totalAdvance | currency")
+                        td.text-bold(ng-bind="::participantResult.totalDebt | currency:model.event.currency")
+                        td.text-bold(ng-bind="::participantResult.totalAdvance | currency:model.event.currency")
