Fix operation directive

--- a/server/views/templates/activity/operation.jade
+++ b/server/views/templates/activity/operation.jade
@@ -5,5 +5,5 @@
     time(ng-bind="::operation.creationDate | debtsTime")
     p
       span(ng-bind="label() | i18next")
-      |  <span class="data" ng-bind="::operation.data"></span>
+      |  <span class="data" ng-bind="::operation.operationData"></span>
       |  <span ng-bind="complement() | i18next"></span>
