--- a/server/views/templates/modal/delete_expense_confirmation.jade
+++ b/server/views/templates/modal/delete_expense_confirmation.jade
@@ -2,10 +2,7 @@
   button.close(type="button" aria-label=t("app.modal.close") ng-click="model.close(false)")
     span(aria-hidden="true") &times;
   h4.modal-title= t("app.expenses.delete.title")
-.modal-body
-  | #{t("app.expenses.delete.warning_1")}
-  span.text-bold  #{t("app.expenses.delete.warning_2")}
-  |  #{t("app.expenses.delete.warning_3")} "{{::model.expense.label}}"#{t("app.expenses.delete.question_mark")}
+.modal-body #{t("app.expenses.delete.warning")} "{{::model.expense.label}}"#{t("app.expenses.delete.question_mark")}
 .modal-footer
   button.btn.btn-default.btn-sm(type="button" ng-click="model.close(false)")= t("app.modal.cancel")
   button.btn.btn-primary.btn-sm(type="button" ng-click="model.close(true)")
