--- a/src/less/includes/activity.less
+++ b/src/less/includes/activity.less
@@ -3,6 +3,8 @@
 }
 
 .operation {
+  display: table;
+  width: 100%;
   padding: 0 0 2em 0;
 }
 
@@ -21,7 +23,7 @@
     top: -30%;
     bottom: -15%;
     left: 50%;
-    border-left: 2px solid @second-brand-color;
+    border-left: 1px dashed #ccc;
     margin-left: -1px;
   }
 
@@ -32,10 +34,9 @@
     height: 2em;
     line-height: 1.9em;
     text-align: center;
-    border: 1px solid #ccc;
     border-radius: 100%;
-    color: #ccc;
-    background-color: @body-bg;
+    color: #fff;
+    background-color: @second-brand-color;
   }
 }
 
