--- a/server/views/templates/event/activity.jade
+++ b/server/views/templates/event/activity.jade
@@ -1,3 +1,6 @@
-.activity(infinite-scroll="activity.loadMore()" infinite-scroll-immediate-check="false"
-    infinite-scroll-disabled="activity.allLoaded || activity.loading")
-  debts-operation(ng-repeat="operation in activity.operations track by operation.id" operation="operation")
+.activity
+  .row
+    .col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1
+      section(infinite-scroll="activity.loadMore()" infinite-scroll-immediate-check="false"
+          infinite-scroll-disabled="activity.allLoaded || activity.loading")
+        debts-operation(ng-repeat="operation in activity.operations track by operation.id" operation="operation")
