--- a/server/views/templates/event/results.jade
+++ b/server/views/templates/event/results.jade
@@ -33,8 +33,8 @@
                     tbody
                       tr(ng-repeat="row in ::participantResult.details" debts-visual-indicator="::")
                         th(scope="row" ng-bind="::row.participantName")
-                        td(ng-bind="::row.mitigatedDebt | currency:model.event.currency")
-                        td(ng-bind="::row.advance | currency:model.event.currency")
+                        td(ng-bind="::mitigatedDebt | currency:model.event.currency" debts-null-if-zero="mitigatedDebt")
+                        td(ng-bind="::advance | currency:model.event.currency" debts-null-if-zero="advance")
                     tfoot
                       tr
                         th(scope="row")= t("app.results.total")
