--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -25,6 +25,12 @@
   margin-bottom: 35px;
 }
 
+.twitter-home {
+  text-align: center;
+  font-size: 60px;
+  color: #55acee;
+}
+
 .expense-board {
   @media (max-width: @screen-xs-max) {
     // Kills affix behaviour on xs screen
