--- a/server/views/templates/event/layout.jade
+++ b/server/views/templates/event/layout.jade
@@ -19,7 +19,7 @@
       .communication
         .twitter-home
           span.fa.fa-twitter
-        p.
+        p.margin-btm-1.
           #{t("app.event.twitter")}
           <a href="https://twitter.com/intent/follow?user_id=731610837740359681" class="external-link" target="_blank">
           @NoDebts4Friends</a>.
