--- a/src/less/style.less
+++ b/src/less/style.less
@@ -42,6 +42,8 @@
 @import "@{bootstrap-less-directory}/utilities";
 @import "@{bootstrap-less-directory}/responsive-utilities";
 
+@import "@{bower-components-directory}/bootstrap-switch/src/less/bootstrap3/bootstrap-switch.less";
+
 @import "@{bower-components-directory}/fontawesome/less/font-awesome";
 
 @import (less) "@{bower-components-directory}/angular-loading-bar/src/loading-bar.css";
